# MGPreconditionedGCR

./: .gitignore  LICENSE  README.md
data/sample_matrix/: parsed.txt
src/: CMakeLists.txt  Dense.cpp  Dense.h  EigenSolver.cpp  EigenSolver.h  Fields.cpp  Fields.h  GCR.cpp  GCR.h  HierarchicalSparse.h  MG.cpp  MG.h  Mesh.cpp  Mesh.h  Operator.cpp  Operator.h  Parse.cpp  Parse.h  SolverParam.h  Sparse.cpp  Sparse.h  cuda.cu  main.cpp  utils.cpp  utils.h
